--- a/lang/nginx/docker-compose.yaml
+++ b/lang/nginx/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   nginx:
-    platform: linux/amd64
+    platform: linux/arm64
     build:
       context: .
       dockerfile: Dockerfile
